@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 {% load i18n %}
-<script type="text/javascript" src="/scripts/MochiKit/MochiKit.js"></script>
-<script type="text/javascript" src="/scripts/comment.js"></script>
 
 {% block title %} {{ post.title }} | I'm TualatriX {% endblock %}
 
