@@ -6,4 +6,4 @@
 
 <ul class="title">	
 	<li class="topic"><a href="{{ post.get_absolute_url }}" rel="bookmark" title="Permanent Link to {{ post.title }}">{{ post.title }}</a></li>
-    <li class="postmeta">Post by {{ post.get_author }} at {{ post.date.year }} . {% trans "Category" %}: {% for category in post.get_categories %}{% if forloop.last %}<a href="{{ category.get_absolute_url }}">{{ category.title }}</a>. {% else %}<a href="{{ category.get_absolute_url }}">{{ category.title }}</a>, {% endif %}{% endfor %} {% get_views_count %}. <a href="{{ post.get_absolute_url}}#comments">{# get_comments_count #}</a> {% if user.is_staff %} <a href="/admin/pulog/post/{{ post.id }}/">{% trans "Edit" %}</a>{% endif %}</li> </ul>
+    <li class="postmeta">Post by {{ post.get_author }} at {{ post.date.year }} . {% trans "Category" %}: {% for category in post.get_categories %}{% if forloop.last %}<a href="{{ category.get_absolute_url }}">{{ category.title }}</a>. {% else %}<a href="{{ category.get_absolute_url }}">{{ category.title }}</a>, {% endif %}{% endfor %} {% get_views_count %}. <a href="{{ post.get_absolute_url}}#comments">{# get_comments_count #}</a> {% if user.is_staff %} <a href="{{ post.get_admin_url }}">{% trans "Edit" %}</a>{% endif %}</li> </ul>
